# placard

./: .gitignore  Cargo.toml  README.md
crates/placard-cli/: Cargo.toml
crates/placard-cli/src/: fetcher.rs  main.rs  utils.rs
crates/placard-connectors/: Cargo.toml
crates/placard-connectors/src/: format.rs  generic.rs  json.rs  lib.rs
crates/placard-connectors/src/services/: meta.rs  mod.rs
crates/placard-connectors/src/services/amo/: downloads.rs  mod.rs  rating.rs  users.rs  version.rs
crates/placard-connectors/src/services/ansible/: collection_downloads.rs  collection_version.rs  mod.rs  role.rs
crates/placard-connectors/src/services/appveyor/: build.rs  job_build.rs  mod.rs  tests.rs
crates/placard-connectors/src/services/archlinux/: archlinux.rs  mod.rs
crates/placard-connectors/src/services/aur/: last_modified.rs  license.rs  maintainer.rs  mod.rs  popularity.rs  version.rs  votes.rs
crates/placard-connectors/src/services/azure_devops/: build.rs  coverage.rs  mod.rs  release.rs  tests.rs
crates/placard-connectors/src/services/bitbucket/: issues.rs  last_commit.rs  mod.rs  pipelines.rs  pull_request.rs
crates/placard-connectors/src/services/bitrise/: bitrise.rs  mod.rs
crates/placard-connectors/src/services/bluesky/: followers.rs  mod.rs  posts.rs
crates/placard-connectors/src/services/bower/: license.rs  mod.rs  version.rs
crates/placard-connectors/src/services/bstats/: mod.rs  players.rs  servers.rs
crates/placard-connectors/src/services/bugzilla/: bugzilla.rs  mod.rs
crates/placard-connectors/src/services/buildkite/: buildkite.rs  mod.rs
crates/placard-connectors/src/services/bundlejs/: mod.rs  package.rs
crates/placard-connectors/src/services/bundlephobia/: bundlephobia.rs  mod.rs
crates/placard-connectors/src/services/cdnjs/: cdnjs.rs  mod.rs
crates/placard-connectors/src/services/chocolatey/: downloads.rs  mod.rs  version.rs
crates/placard-connectors/src/services/chrome_web_store/: last_updated.rs  mod.rs  rating.rs  rating_count.rs  size.rs  users.rs  version.rs
crates/placard-connectors/src/services/cii_best_practices/: cii_best_practices.rs  mod.rs
crates/placard-connectors/src/services/circleci/: circleci.rs  mod.rs
crates/placard-connectors/src/services/clearlydefined/: mod.rs  score.rs
crates/placard-connectors/src/services/clojars/: downloads.rs  mod.rs  version.rs
crates/placard-connectors/src/services/cocoapods/: docs.rs  license.rs  mod.rs  platform.rs  version.rs
crates/placard-connectors/src/services/codacy/: coverage.rs  grade.rs  mod.rs
crates/placard-connectors/src/services/codecov/: codecov.rs  mod.rs
crates/placard-connectors/src/services/codefactor/: grade.rs  mod.rs
crates/placard-connectors/src/services/coderabbit/: mod.rs  pull_request.rs
crates/placard-connectors/src/services/conda/: downloads.rs  license.rs  mod.rs  platform.rs  version.rs
crates/placard-connectors/src/services/cookbook/: cookbook.rs  mod.rs
crates/placard-connectors/src/services/coveralls/: coveralls.rs  mod.rs
crates/placard-connectors/src/services/coverity/: mod.rs  scan.rs
crates/placard-connectors/src/services/cpan/: license.rs  mod.rs  version.rs
crates/placard-connectors/src/services/cran/: license.rs  mod.rs  version.rs
crates/placard-connectors/src/services/crates/: dependents.rs  downloads.rs  license.rs  mod.rs  msrv.rs  size.rs  user_downloads.rs  version.rs
crates/placard-connectors/src/services/ctan/: license.rs  mod.rs  version.rs
crates/placard-connectors/src/services/debian/: debian.rs  mod.rs
crates/placard-connectors/src/services/depfu/: depfu.rs  mod.rs
crates/placard-connectors/src/services/deps_rs/: crate.rs  mod.rs  repo.rs
crates/placard-connectors/src/services/discourse/: discourse.rs  mod.rs
crates/placard-connectors/src/services/docker/: automated.rs  mod.rs  pulls.rs  size.rs  stars.rs  version.rs
crates/placard-connectors/src/services/docsrs/: docsrs.rs  mod.rs
crates/placard-connectors/src/services/dub/: download.rs  license.rs  mod.rs  score.rs  version.rs
crates/placard-connectors/src/services/dynamic/: json.rs  mod.rs  regex.rs  toml.rs  xml.rs  yaml.rs
crates/placard-connectors/src/services/eclipse_marketplace/: downloads.rs  favorites.rs  license.rs  mod.rs  update.rs  version.rs
crates/placard-connectors/src/services/ecologi/: carbon.rs  mod.rs  trees.rs
crates/placard-connectors/src/services/elm_package/: elm_package.rs  mod.rs
crates/placard-connectors/src/services/endpoint/: endpoint.rs  mod.rs
crates/placard-connectors/src/services/f_droid/: f_droid.rs  mod.rs
crates/placard-connectors/src/services/factorio_mod_portal/: downloads.rs  factorio_version.rs  last_updated.rs  mod.rs  version.rs
crates/placard-layout/: Cargo.toml
crates/placard-layout/examples/: layout_dump.rs
crates/placard-layout/src/: block.rs  flex.rs  grid.rs  inline.rs  lib.rs  tree.rs
crates/placard-paint/: Cargo.toml
crates/placard-paint/examples/: badge_demo.rs  paint_demo.rs
crates/placard-paint/src/: geometry.rs  lib.rs  paint.rs  text.rs
crates/placard-payload/: Cargo.toml
crates/placard-payload/examples/: gen_dictionary.rs
crates/placard-payload/src/: bounded.rs  dictionary.rs  lib.rs
crates/placard-raster/: Cargo.toml
crates/placard-raster/examples/: gradient.rs  render_text.rs  webp_roundtrip_check.rs
crates/placard-raster/src/: adler32.rs  canvas.rs  crc32.rs  lib.rs  path.rs  png.rs
crates/placard-raster/src/webp/: bitwriter.rs  huffman.rs  lz77.rs  mod.rs
crates/placard-render/: Cargo.toml
crates/placard-render/examples/: webp_size_check.rs
crates/placard-render/src/: format.rs  lib.rs
crates/placard-style/: Cargo.toml
crates/placard-style/examples/: compute_style.rs
crates/placard-style/src/: cascade.rs  lib.rs  matching.rs  style.rs
docs/: Cargo.toml  build.rs
docs/routes/: index.html  style.css
docs/routes/assets/: theme.css  theme.js
docs/routes/connectors/: index.html  script.js  style.css
docs/routes/sandbox/: editor.js  index.html  script.js  style.css
docs/src/: fetcher.rs  main.rs
(+418 files in other folders)
