[workspace]
resolver = "2"
members = [
    "crates/placard-cli",
    "crates/placard-raster",
    "crates/placard-font",
    "crates/placard-html",
    "crates/placard-css",
    "crates/placard-style",
    "crates/placard-layout",
    "crates/placard-paint",
    "crates/placard-render",
    "crates/placard-connectors",
    "crates/placard-payload",
]

[package]
name = "placard-docs-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
placard-render = { path = "crates/placard-render" }
placard-font = { path = "crates/placard-font" }
placard-payload = { path = "crates/placard-payload" }

ureq = { version = "=3.3.0" }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
