[package]
name = "placard"
version = "0.1.0"
edition = "2024"
description = "Turns an HTML + CSS document into a PNG or WebP image, with live connector data baked in at render time"
license = "Apache-2.0"
repository = "https://github.com/shdwmtr/placard"

[dependencies]
placard-render = { path = "../placard-render", version = "0.1.0" }
placard-raster = { path = "../placard-raster", version = "0.1.0" }
placard-font = { path = "../placard-font", version = "0.1.0" }

# The one deliberate exception
ureq = { version = "=3.3.0", default-features = false, features = ["native-tls", "gzip"] }
